can create bookmark - fully working now

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,7 +1,7 @@
 <h2>Bookmarks</h2>
 
 <p>
-<%@bookmarks.each do |b|%> 
-<p><%=b%></p>
+<%@bookmarks.each do |bookmark|%> 
+<p><%=bookmark%></p>
 <% end %></p>
     
