--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,4 +1,4 @@
-<form action='/bookmarks/create' method='post' >
+<form action='/bookmarks' method='post' >
   <label for='new bookmark'>
     Please enter a url:
     <input type='text' name='url'>
