--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -2,6 +2,20 @@
 
 <p>
 <%@bookmarks.each do |bookmark|%> 
-<p><%=bookmark%></p>
+<p>
+<a href="<%=bookmark.url%>">
+<%=bookmark.title%></a>
+</p>
 <% end %></p>
+
+<form action='/bookmarks_new' method='post' >
+  <label for='new bookmark'>
+    Please enter a title:
+    <input type='text' name='title'>
+    Please enter a url:
+    <input type='text' name='url'>
+  </label>
+  <input type='submit' value='Submit'>
+  </form>
+
     
