Added update feature test, partly added update.erb

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -6,6 +6,10 @@
       <a href="<%= bookmark.url %>" target='_blank'>
         <%= bookmark.title %>
       </a>
+      <form action='/bookmarks/<%= bookmark.id %>/update' method='post'>
+        <input type='hidden' name='_method' value='PATCH'>
+        <input type='submit' value='Update'>
+      </form>
       <form action='/bookmarks/<%= bookmark.id %>' method='post'>
         <input type='hidden' name='_method' value='DELETE'>
         <input type='submit' value='Delete'>
