--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -6,8 +6,7 @@
       <a href="<%= bookmark.url %>" target='_blank'>
         <%= bookmark.title %>
       </a>
-      <form action='/bookmarks/<%= bookmark.id %>/update' method='post'>
-        <input type='hidden' name='_method' value='PATCH'>
+      <form action='/bookmarks/<%= bookmark.id %>/update' method='get'>
         <input type='submit' value='Update'>
       </form>
       <form action='/bookmarks/<%= bookmark.id %>' method='post'>
