--- a/views/bookmarks/update.erb
+++ b/views/bookmarks/update.erb
@@ -1,11 +1,12 @@
-<form action='/bookmarks/:id' method='post' >
+<form action='/bookmarks/<%= @bookmark.id %>' method='post'>
+  <input type='hidden' name='_method' value='PATCH'>
   <label for='title'>
     Please enter a title:
   </label>
-  <input type='text' name='title'>
+  <input type='text' name='title' value=<%= @bookmark.title %>>
   <label for='url'>
     Please enter a url:
   </label>
-  <input type='text' name='url'>
+  <input type='text' name='url' value=<%= @bookmark.url %>>
   <input type='submit' value='Submit'>
 </form>
